--- a/SimpleTextEditor/App.config
+++ b/SimpleTextEditor/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="OPENAI_API_KEY" value=""/>
+    <add key="OPENAI_API_KEY" value="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"/>
     <!--Get Key from https://beta.openai.com/account/api-keys-->
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
